Implement |GetChildrenInZOrder| in browser and top container views

Currently, we ensure that the bookmark bar view is always the first
child view of its parent to ensure that toolbar inkdrops are drawn on
top of it. Unfortunately, this breaks keyboard traversal order.

This change implements |GetChildrenInZOrder| on the two views that
host the bookmark bar: browser view and top container view. This
ensures that the bookmark bar is painted first, removing the need
to manipulate child view order.

Bug: 712347
Change-Id: If8f2aabe816a86b7ec29ff41779783c0f05a6393
Reviewed-on: https://chromium-review.googlesource.com/1052854
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557537}
Former-commit-id: e3d543507e23d66d3b923670b1ac132b55dcd887