chrome/browser/ui/views/frame/top_container_view.h
@@ -24,6 +24,7 @@ class TopContainerView : public views::View {
   const char* GetClassName() const override;
   void PaintChildren(const views::PaintInfo& paint_info) override;
   void ChildPreferredSizeChanged(views::View* child) override;
+  views::View::Views GetChildrenInZOrder() override;
 
  private:
   // The parent of this view. Not owned.
